--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,10 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "openpyxl>=3.1.5",
+    "pandas>=2.3.3",
+    "plotly>=6.5.0",
+    "scikit-learn>=1.7.2",
+    "torch>=2.9.1",
+    "transformers>=4.57.3",
+    "umap-learn>=0.5.9.post2",
 ]
